force-app/main/default/objects/UPP_Order_Acknowledgement__c/UPP_Order_Acknowledgement__c.object-meta.xml
<CustomObject>
    <label>UPP Order Acknowledgement</label>
    <nameField>
        <label>UPP Order Acknowledgement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UPP Order Acknowledgements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>