force-app/main/default/objects/UPP_Order_Acknowledgement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UPP Order Acknowledgements (Account)</relationshipLabel>
    <relationshipName>UPP_Order_Acknowledgements1</relationshipName>
    <type>Lookup</type>
</CustomField>