force-app/main/default/objects/UPP_Order_Acknowledgement__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <type>Url</type>
</CustomField>