force-app/main/default/objects/UPP_Order_Acknowledgement__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>UPP Order Acknowledgements</relationshipLabel>
    <relationshipName>UPP_Order_Acknowledgements</relationshipName>
    <type>Lookup</type>
</CustomField>