force-app/main/default/objects/UPP_Order_Acknowledgement__c/fields/Sold_To_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Sold_To_Customer_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold To Customer Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UPP Order Acknowledgements</relationshipLabel>
    <relationshipName>UPP_Order_Acknowledgements</relationshipName>
    <type>Lookup</type>
</CustomField>